# repo-scaffold

./: Makefile  README.md  pyproject.toml  startup.py
repl/: ipython.py  startup.py
